fixing text overflow issues in header title on iphone

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -4,6 +4,10 @@
   top: 0;
   width: 100%;
   color: inherit;
+  /*
+  margin: auto;
+  */
+
 }
 
 .nav-item {
@@ -16,7 +20,8 @@ a {
 }
 
 .title {
-  font-size: 3rem;
+  //font-size: 3rem;
+  font-size: 13vw;
   text-decoration: none;
 }
 
